Cant get Autowired to work

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,5 @@
-Size.attendee.name=Name must be between {2} and {1} characters
+Size.attendee.name=Name must be between {2} and {1} characters.
+#Size.candidate.party=Party must be between {2} and {1} characters.
 
 Email=Not a valid email address
 
@@ -6,6 +7,12 @@ NotEmpty=Field cannot be left blank
 
 Phone=Not a valid phone number
 
+Party=Not a valid party name
+
 attendee.name=Enter Name
 attendee.email.address=Enter Email Address
 attendee.phone=Enter Phone
+
+
+candidate.name=Enter Name
+candidate.party=Party Name
