--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -4,5 +4,8 @@ Email=No es una dirección de correo electrónico válida
 
 NotEmpty=El campo no puede estar en blanco
 
+Phone=No es un número de teléfono válido
+
 attendee.name=Introducir nombre
 attendee.email.address=Introduzca la dirección de correo electrónico
+attendee.phone=Número de teléfono
