--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -9,6 +9,8 @@ Phone=Not a valid phone number
 
 Party=Not a valid party name
 
+EventName="Bring all your mates!"
+
 attendee.name=Enter Name
 attendee.email.address=Enter Email Address
 attendee.phone=Enter Phone
@@ -16,3 +18,5 @@ attendee.phone=Enter Phone
 
 candidate.name=Enter Name
 candidate.party=Party Name
+
+event.name=Event Name
